--- a/hexo-hiker/_config.yml
+++ b/hexo-hiker/_config.yml
@@ -20,8 +20,8 @@ admin:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://test.wehiking.com/
+root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
