--- a/hexo-hiker/_config.yml
+++ b/hexo-hiker/_config.yml
@@ -3,25 +3,25 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: WeHome
 subtitle:
 description:
 keywords:
-author: John Doe
+author: WeHome|Blog
 language:
 timezone:
 
 # hexo-admin authentification
 admin:
   username: admin
-  password_hash: $2a$10$Nrs01bjITo1XJyS/XxiH0OUrQz/h6VqZFzSxRc.t04m5je0ib.5kO
+  password_hash: $2a$10$fpxALruTUAdgTWO65FKyVeXqnTo30LMrfrbU8C7MqeOOTnRO1HP8W
   secret: wehome-admin
   deployCommand: './script/hexo-g.sh'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://test.wehiking.com/
-root: /blog/
+root: /enblog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
