--- a/hexo-hiker/_config.yml
+++ b/hexo-hiker/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: WeHome
 subtitle:
-description: Wehome is a secure big data AI driven real estate equity trading platform
-keywords: Wehome, US real estate, US real estate equity investment
-,US investment, US real estate investment
+description: 'Wehome is a secure big data AI driven real estate equity trading platform'
+keywords: 'Wehome,US real estate,US real estate equity investment
+,US investment,US real estate investment'
 author: WeHome|Blog
 language:
 timezone:
